k8s/overlays/shokohsc/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ouistity
spec:
  template:
    spec:
      containers:
        - name: ouistity
          image: shokohsc/ouistity
          resources:
            requests:
              cpu: 10m
              memory: 64M
            limits:
              cpu: 1000m
              # memory: 256M
              memory: 2048M
