k8s/overlays/shokohsc/imgproxy.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: imgproxy
spec:
  selector:
    matchLabels:
      app: imgproxy
  template:
    metadata:
      labels:
        app: imgproxy
    spec:
      containers:
        - name: imgproxy
          image: darthsim/imgproxy
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              port: http
              path: /health
          readinessProbe:
            httpGet:
              port: http
              path: /health
          resources:
            requests:
              cpu: 10m
              memory: 64M
            limits:
              cpu: 200m
              memory: 256M
---
apiVersion: v1
kind: Service
metadata:
  name: imgproxy
  labels:
    app: imgproxy
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: imgproxy
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: imgproxy
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    cert-manager.io/cluster-issuer: ca-cluster-issuer
spec:
  rules:
  - host: imgproxy.ouistity.shokohsc.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: imgproxy
            port:
              number: 80
  tls:
  - hosts:
    - imgproxy.ouistity.shokohsc.home
    secretName: imgproxy-cert
