k8s/overlays/shokohsc/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ouistity
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/group: dev
    forecastle.stakater.com/appName: ouistity
spec:
  rules:
  - host: ouistity.shokohsc.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ouistity
            port:
              number: 80
  tls:
  - hosts:
    - ouistity.shokohsc.home
    secretName: ouistity-cert
