k8s/overlays/shokohsc/thumbor.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: thumbor
spec:
  selector:
    matchLabels:
      app: thumbor
  template:
    metadata:
      labels:
        app: thumbor
    spec:
      containers:
        - name: thumbor
          image: minimalcompact/thumbor
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              port: http
              path: /healthcheck
          readinessProbe:
            httpGet:
              port: http
              path: /healthcheck
          resources:
            requests:
              cpu: 10m
              memory: 64M
            limits:
              cpu: 200m
              memory: 256M
---
apiVersion: v1
kind: Service
metadata:
  name: thumbor
  labels:
    app: thumbor
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: thumbor
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thumbor
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-cors: "true"
    cert-manager.io/cluster-issuer: ca-cluster-issuer
spec:
  rules:
  - host: thumbor.ouistity.shokohsc.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thumbor
            port:
              number: 80
  tls:
  - hosts:
    - thumbor.ouistity.shokohsc.home
    secretName: thumbor-cert
